--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,5 +11,8 @@ http {
         location /create_user {
             proxy_pass http://create_user:5000/;
         }
+        location /login {
+            proxy_pass http://login:5002/;
+        }
     }
 }
