--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,18 @@ http {
             proxy_pass http://create_user:5000/;
         }
         location /login {
-            proxy_pass http://login:5002/;
+            proxy_pass http://login:5002/login;
         }
+        location /private {
+            auth_request /auth;
+            proxy_pass http://list_user:5001/;
+        }
+        location = /auth {
+            internal;
+            proxy_pass http://login:5002/auth;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+        }
+
     }
 }
