--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ http {
             proxy_pass http://list_user:5001/;
         }
         location /create_user {
+            auth_request /auth;
             proxy_pass http://create_user:5000/;
         }
         location /login {
