--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,9 @@ events {
 http {
     server {
         listen       80;
+        location /myapp {
+            proxy_pass http://myapp:5003/;
+        }
         location /list_user {
             proxy_pass http://list_user:5001/;
         }
