--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,18 @@ http {
         location /myapp {
             proxy_pass http://myapp:5003/;
         }
+        location /myapp/del {
+            auth_request /auth;
+            proxy_pass http://myapp:5003/deleteInfo;
+        }
+        location /myapp/add {
+            auth_request /auth;
+            proxy_pass http://myapp:5003/addInfo;
+        }
+        location /myapp/upd {
+            auth_request /auth;
+            proxy_pass http://myapp:5003/editInfo;
+        }
         location /list_user {
             proxy_pass http://list_user:5001/;
         }
